--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#logging.level.org.springframework=DEBUG
-#logging.level.org.hibernate=DEBUG
-#
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
+
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.hibernate.ddl-auto=update
