--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=DEBUG
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.thymeleaf.prefix=classpath:/static/
+spring.thymeleaf.suffix=.html
+
+spring.jpa.hibernate.ddl-auto=update
