--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.thymeleaf.prefix=classpath:/static/
 spring.thymeleaf.suffix=.html
 
 spring.jpa.hibernate.ddl-auto=update
+
+server.servlet.session.timeout=1m
