--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.security=DEBUG
+
 
 spring.thymeleaf.prefix=classpath:/static/
 spring.thymeleaf.suffix=.html
 
 spring.jpa.hibernate.ddl-auto=update
 
-server.servlet.session.timeout=1m
+#server.servlet.session.timeout=2m
