--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3308/timeTracker?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3308/cms?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#logging.level.org.springframework=DEBUG
-#logging.level.org.hibernate=DEBUG
-#
-#spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+
+spring.thymeleaf.prefix=classpath:/static/
+spring.thymeleaf.suffix=.html
+
+spring.jpa.hibernate.ddl-auto=update
+
+#server.servlet.session.timeout=2m
