--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.thymeleaf.suffix=.html
 spring.jpa.hibernate.ddl-auto=update
 
 #server.servlet.session.timeout=2m
-spring.devtools.restart.enabled=truehmb
+spring.devtools.restart.enabled=true
